# GRICserver

./: .gitignore  README.md  docker-compose.yml
sources/: AUTHORS  BEDEL  Cargo.toml  TODO
sources/src/: main.rs
